--- a/client/src/style.css
+++ b/client/src/style.css
@@ -28,8 +28,16 @@ a {
 
 .md-20 {
   font-size: 20px !important;
-  
 }
+
 .md-48 {
   font-size: 48px !important;
+}
+
+.md-60 {
+  font-size: 60px !important;
+}
+
+.track-more-info {
+  padding-right: 15px;
 }
